<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FullMusicActivity" >

    <TextureView
        android:id="@+id/background_video"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleX="1.15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/background_transparent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@color/gray_music"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/full_music_transparent_image" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="25dp"
                android:src="@drawable/baseline_keyboard_backspace_24_white"
                android:background="@null"
                android:contentDescription="@string/full_music_back_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <HorizontalScrollView
                android:id="@+id/tags"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="90dp"
                android:contentDescription="@string/full_music_tags"
                android:scrollbars="none"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:id="@+id/tags_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />

            </HorizontalScrollView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_cover"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="25dp"
                android:layout_gravity="center"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tags">

                <ImageView
                    android:id="@+id/cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/music_cover_beyonce_heated"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/full_music_cover" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="25dp"
                android:text="@string/full_music_title"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/card_cover"
                app:layout_constraintTop_toTopOf="@id/card_cover" />

            <TextView
                android:id="@+id/musician"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/full_music_musician"
                android:textColor="@color/white"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="@id/title"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <Button
                android:id="@+id/like_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/full_music_like_button"
                app:strokeColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/card_cover"
                app:layout_constraintStart_toStartOf="@id/card_cover" />

            <ImageButton
                android:id="@+id/share_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="18dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/baseline_ios_share_24"
                android:background="@null"
                android:contentDescription="@string/full_music_share_button"
                app:layout_constraintStart_toEndOf="@id/like_button"
                app:layout_constraintTop_toBottomOf="@id/card_cover" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="30dp"
                android:scrollbars = "vertical"
                android:text="@string/full_music_description"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/like_button"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>