<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/paragraph_media_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/palette_brown"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_cover"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_gravity="center"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title">

        <ImageView
            android:id="@+id/cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/media_paragraph_ahs_cult_2"
            android:contentDescription="@string/paragraph_media_cover" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/paragraph_media_text"
        android:textSize="15sp"
        android:textColor="@color/palette_black"
        android:lineSpacingExtra="4sp"
        app:layout_constraintTop_toBottomOf="@id/card_cover"
        app:layout_constraintStart_toStartOf="@id/card_cover"/>

</androidx.constraintlayout.widget.ConstraintLayout>