<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FullMediaActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_full_background" >

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/back_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/baseline_keyboard_backspace_24_white"
                    android:background="@null"
                    android:contentDescription="@string/full_media_back_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <HorizontalScrollView
                    android:id="@+id/tags"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="90dp"
                    android:scrollbars="none"
                    android:contentDescription="@string/full_media_tags"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <LinearLayout
                        android:id="@+id/tags_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" />

                </HorizontalScrollView>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/full_media_title"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/tags"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_cover"
                    android:layout_width="match_parent"
                    android:layout_height="215dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintTop_toBottomOf="@id/title">

                    <ImageView
                        android:id="@+id/cover"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/media_cover_ahs_cult"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/full_media_cover" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:paddingBottom="20dp"
                    android:text="@string/full_media_description"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/card_cover"
                    app:layout_constraintStart_toStartOf="@id/card_cover"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>