<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FullPlacesActivity" >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_full_background" >

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/back_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/baseline_keyboard_backspace_24_white"
                    android:background="@null"
                    android:contentDescription="@string/full_place_back_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <HorizontalScrollView
                    android:id="@+id/tags"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="90dp"
                    android:contentDescription="@string/full_places_tags"
                    android:scrollbars="none"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" >

                    <LinearLayout
                        android:id="@+id/tags_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" />

                </HorizontalScrollView>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/full_place_title"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/tags"
                    app:layout_constraintStart_toStartOf="parent"/>


                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/carousel"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintTop_toBottomOf="@id/title" />

                <TextView
                    android:id="@+id/description"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/full_place_description"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/carousel"
                    app:layout_constraintStart_toStartOf="@id/carousel"/>

                <ImageView
                    android:id="@+id/address_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="27dp"
                    android:src="@drawable/places_logo_maps"
                    android:contentDescription="@string/full_places_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/description"/>

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="55dp"
                    android:text="@string/full_places_address"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/description"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/metro_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="23dp"
                    android:contentDescription="@string/full_places_metro"
                    android:src="@drawable/places_logo_metro_moscow"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address" />

                <TextView
                    android:id="@+id/metro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="55dp"
                    android:text="@string/full_places_metro"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/address"
                    app:layout_constraintStart_toStartOf="parent"/>

                <ImageView
                    android:id="@+id/social_media_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginStart="23dp"
                    android:src="@drawable/places_logo_instagram"
                    android:contentDescription="@string/full_places_social_media"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/metro" />

                <TextView
                    android:id="@+id/social_media"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="55dp"
                    android:paddingBottom="30dp"
                    android:text="@string/full_places_social_media"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/metro"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>